# wikimind

./: .dockerignore  .docs-sync.yaml  .editorconfig  .env.example  .env.make.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  .venv  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRIVACY.md  Procfile.dev  README.md  alembic.ini  codecov.yml  coverage.xml  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.parity.yml  docker-compose.prod.yml  docker-compose.yml  fly.conf  fly.docling.toml  fly.redis.toml  fly.staging.toml  fly.toml  gunicorn.conf.py  index.html  package-lock.json  package.json  pyproject.toml  (+3 more)
.context/: codex-session-id
.devcontainer/: devcontainer.json
.github/: codeql-config.yml  pull_request_template.md
.github/trivy/: ignore-policy.rego
.github/workflows/: alembic-check.yml  auth-multiuser.yml  auto-rebase.yml  bandit.yml  claude-review-address.yml  codeql.yml  dependency-review.yml  deploy.yml  doc-sync.yml  docker.yml  docs.yml  e2e.yml  extension-publish.yml  full-verify.yml  lint.yml  lockfile-check.yml  migration-replay.yml  migration-safety.yml  nightly.yml  post-merge-sweep.yml  postgres-integration-skip.yml  postgres-integration.yml  pre-commit.yml  prune-stale.yml  release.yml  smoke.yml  test.yml  uptime.yml
.serena/: project.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema_from_sqlmodel_definitions.py  0002_add_user_id_to_all_tables.py  0003_add_article_concept_and_article_source_join_tables.py  0004_add_openai_compatible_provider_enum_value.py  0005_make_user_id_not_null_on_all_models.py  0006_drop_stale_ix_concept_name_unique_index.py  0007_add_article_confidence_score.py  0008_add_article_manual_edit_fields.py  0008_add_contradiction_table.py  0008_add_conversation_crystallized_article_id.py  0008_add_staleness_and_reinforcement_event.py  0008b_add_contradiction_table.py  0008c_add_conversation_crystallized_article_id.py  0008d_add_staleness_and_reinforcement_event.py  0009_add_article_is_stub.py  0010_add_concept_layer_tables.py  0010_add_user_is_admin.py  0011_add_user_is_admin.py  0012_add_missing_columns_and_tables.py  0013_add_source_clean_text.py  0014_add_source_image_table.py  0015_add_llmtrace_table.py  0016_add_mcp_access_token.py  0016_add_oauth_authorization_tables.py  0017_add_oauth_authorization_tables.py  0018_add_billing_tables.py  0019_add_ambient_adapter_setting_table.py  0019_add_discussion_message_table.py  0019_add_source_span_table.py  0019_backfill_compiled_claims_from_markdown.py  0020_backfill_compiled_claims_from_markdown.py  0021_add_ambient_adapter_setting_table.py  0022_add_discussion_message_table.py  0023_add_sourcespan_stale_column.py  0024_add_source_extraction_metadata.py
api/openapi/: index.html
apps/desktop/: package-lock.json  package.json  tsconfig.json
apps/web/: .env.development  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web-extension/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.sw.ts  vite.config.ts
architecture/: index.html
architecture/adr/: index.html
architecture/compiler/: index.html
architecture/diagrams/: compilation-pipeline.mmd  data-model.mmd
architecture/ingest/: index.html
architecture/storage/: index.html
configuration/auth/: index.html
configuration/llm-providers/: index.html
configuration/settings/: index.html
deployment/docker/: index.html
deployment/fly-io/: index.html
deployment/local/: index.html
design-system/: README.md  SKILL.md  colors_and_type.css
design-system/marketing/: index.html
design-system/preview/: _card.css  brand-iconography.html  brand-logo.html  brand-voice.html  colors-brand.html  colors-confidence.html  colors-neutrals.html  colors-semantic.html  component-badges.html  component-buttons.html  component-card.html  component-chips.html  component-inputs.html  component-nav.html  component-source.html  component-toast.html  component-turn.html  spacing-radii.html  spacing-scale.html  spacing-shadow.html  type-inter.html  type-mono.html  type-scale.html
development/ci-cd/: index.html
development/contributing/: index.html
development/testing/: index.html
docker/: entrypoint.sh  start-combined.sh
docs/: ARCHITECTURE.md  Makefile  ROADMAP.md  VISION.md  extension-publishing.md  mkdocs.yml  openapi.yaml  requirements.txt  test-matrix-results.md
docs/adr/: README.md  adr-001-fastapi-async-sqlite.md  adr-002-arq-fakeredis.md  adr-003-multi-provider-llm-router.md  adr-004-markdown-files-sqlite-metadata.md  adr-005-confidence-tagged-claims.md  adr-006-chunked-compilation.md  adr-007-structured-json-prompt-contract.md  adr-008-pydantic-basesettings.md  adr-009-decoupled-ingest-compilation.md  adr-010-llm-provider-auto-enable.md  adr-011-conversational-qa-thread-model.md  adr-012-knowledge-graph-architecture.md  adr-013-react-force-graph-2d.md  adr-014-hybrid-search-architecture.md  adr-015-cpu-first-docker-packaging.md  adr-016-article-recompilation.md  adr-017-backlink-enforcer-lint-phase.md  adr-018-batched-contradiction-detection.md  adr-019-runtime-user-preferences.md  adr-020-cloud-storage-abstraction.md  adr-021-postgres-compatibility.md  adr-022-multi-user-authentication.md  adr-022-pr-automation-workflows.md  (+10 more)
scripts/: README.md  backfill_dedup_fields.py  backfill_images.py  bandit_json_to_sarif.py  check_doc_sync.py  check_docker_bloat.py  check_layer_boundaries.py  check_migration_safety.py  check_noqa.py  check_schema_drift.py  dump_fly_migration_fixtures.py  evidence_rich_content.py  export_openapi.py  fly-setup.sh  migrate_files_to_user_dirs.py  regenerate_adr_index.py  regenerate_readme_targets.py  run_test_matrix.py  test-user-isolation.sh  test_image_extraction.py  test_migration_0010.sh  update_secrets_baseline.py  verify_staging.sh
search/: search_index.json
tests/: conftest.py  snapshot_utils.py
(+665 files in other folders)
