[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikimind"
version = "0.1.0"
description = "WikiMind Local Gateway — Personal LLM Knowledge OS"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",

    # Data validation
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",

    # Database
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Job queue
    "arq>=0.26.1",
    "fakeredis>=2.26.0",

    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.54.3",
    "google-genai>=1.0.0",
    "ollama>=0.3.3",

    # Document processing (docling is in [pdf] extra — see below)
    "trafilatura>=1.12.2",
    "pymupdf>=1.24.13",
    "youtube-transcript-api>=0.6.3",
    "feedparser>=6.0.11",

    # Security / keychain
    "keyring>=25.4.1",
    "PyJWT>=2.8.0",

    # Sync
    "boto3>=1.35.49",
    "httpx>=0.27.2",

    # Production server
    "gunicorn>=22.0.0",

    # Utilities
    "python-slugify>=8.0.4",
    "python-dateutil>=2.9.0",
    "toml>=0.10.2",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
pdf = [
    "docling>=2.0",
]
search = [
    "chromadb>=0.5.20",
    "sentence-transformers>=3.2.1",
]
transcribe = [
    "openai-whisper>=20240930",
]
dev = [
    "wikimind[test,lint,pdf]",
]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
    "greenlet>=3.0.0",
]
lint = [
    "ruff>=0.15.9",
    "mypy>=1.12.0",
    "pylint>=3.3.0",
    "pylint-pydantic>=0.3.0",
    "pydocstyle>=6.3.0",
    "pre-commit>=3.8.0",
    "types-toml>=0.10.0",
    "bandit[toml]>=1.7",
    "vulture>=2.11",
    # Doc-sync scripts (export_openapi, check_doc_sync, etc.)
    "pyyaml>=6.0",
    "pathspec>=0.12",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["wikimind*"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "PL",     # pylint rules (via ruff)
    "D",      # pydocstyle
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "D100",   # missing docstring in public module — enforced by pydocstyle directly
    "D104",   # missing docstring in public package (__init__.py)
    "D107",   # missing docstring in __init__ — not required for dataclasses/models
    "D203",   # one-blank-line-before-class — conflicts with D211
    "D212",   # multi-line-summary-first-line — conflicts with D213 (we use Google style)
    "D407",   # dashed-underline-after-section — not Google style
    "D406",   # section-name-should-end-with-newline — not Google style
    "PLR0913", # too many arguments — common in FastAPI routes
    "PLR2004", # magic value comparison — too noisy for early stage
    "PLR0915", # too many statements — some functions are legitimately long
    "PLW0603", # global statement — acceptable for singleton patterns (engine, session factory)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.isort]
known-first-party = ["wikimind"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------- Pylint ----------
[tool.pylint.main]
load-plugins = ["pylint_pydantic"]
py-version = "3.11"

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring — handled by pydocstyle
    "C0115",  # missing-class-docstring — not required for all classes
    "C0116",  # missing-function-docstring — not required for all functions
    "R0903",  # too-few-public-methods — Pydantic models trigger this
    "R0913",  # too-many-arguments — common in FastAPI routes
    "E0611",  # no-name-in-module — false positives with pydantic
    "W0511",  # fixme — TODOs are acceptable
]

[tool.pylint.format]
max-line-length = 120

# ---------- Pydocstyle ----------
[tool.pydocstyle]
convention = "google"
add-ignore = ["D104", "D107"]
match = "(?!test_).*\\.py"
match-dir = "(?!tests).*"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true

# ---------- Basedpyright ----------
[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = false
reportMissingTypeStubs = false

# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests requiring full stack",
    "external: tests that call external APIs",
    "postgres: tests that require a running PostgreSQL instance",
]

# ---------- Coverage ----------
[tool.coverage.run]
source = ["wikimind"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
fail_under = 40
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ---------- Bandit ----------
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B105"]  # B101: assert ok; B105: false positives on key-name mappings
