[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikimind"
version = "0.1.0"
description = "WikiMind Local Gateway — Personal LLM Knowledge OS"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.27", # CVE-2026-42561 — DoS via unbounded multipart headers
    # Data validation
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    # Database
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "mako>=1.3.12", # CVE-2026-44307 — path traversal via backslash URI
    # Job queue + cross-replica pub/sub
    "arq>=0.26.1",
    "fakeredis>=2.26.0",
    "redis>=5.0.0",
    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.54.3",
    "google-genai>=1.0.0",
    "ollama>=0.3.3",
    # Document processing (docling is in [pdf] extra — see below)
    "defusedxml>=0.7.1",
    "lxml>=6.1.0", # CVE-2026-41066 — transitive dep, pinned to force safe version
    "trafilatura>=1.12.2",
    "pymupdf>=1.24.13",
    "youtube-transcript-api>=0.6.3",
    "feedparser>=6.0.11",
    # Security / keychain
    "keyring>=25.4.1",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    # Sync
    "boto3>=1.35.49",
    "httpx>=0.27.2",
    # Production server
    "gunicorn>=22.0.0",
    # Monitoring
    "prometheus-fastapi-instrumentator>=7.0.0",
    # MCP (Model Context Protocol)
    "fastmcp>=3.0.2",
    # Rate limiting
    "slowapi>=0.1.9",
    # Utilities
    "python-slugify>=8.0.4",
    "python-dateutil>=2.9.0",
    "toml>=0.10.2",
    "pyyaml>=6.0",
    "structlog>=24.4.0",
    "click>=8.1.0",
    "urllib3>=2.7.0",
]

[project.scripts]
wikimind = "wikimind.cli.main:cli"

[project.optional-dependencies]
pdf = [
    # docling is now provided by docling-serve sidecar — no in-process dep needed.
]
export = [
    # Future: weasyprint or other PDF rendering libs can be added here.
    # The default export uses markdown-to-HTML which requires no extra deps.
]
monitoring = [
    "sentry-sdk[fastapi]>=2.0.0",
]
search = [
    "chromadb>=0.5.20",
    "sentence-transformers>=3.2.1",
]
transcribe = [
    "openai-whisper>=20240930",
]
dev = [
    "wikimind[test,lint]",
    "honcho>=2.0.0",
]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.1",
    "httpx>=0.27.2",
    "greenlet>=3.0.0",
]
lint = [
    "ruff>=0.15.9",
    "mypy>=1.12.0",
    "pylint>=3.3.0",
    "pylint-pydantic>=0.3.0",
    "pydocstyle>=6.3.0",
    "pre-commit>=3.8.0",
    "types-toml>=0.10.0",
    "types-PyYAML>=6.0",
    "bandit[toml]>=1.7",
    "vulture>=2.11",
    "interrogate>=1.7.0",
    "deptry>=0.25.1",
    "detect-secrets>=1.4.0",
    # Doc-sync scripts (export_openapi, check_doc_sync, etc.)
    "pyyaml>=6.0",
    "pathspec>=0.12",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["wikimind*"]

# ---------- Ruff ----------
[tool.ruff]
exclude = ["docs/evidence", "alembic/versions"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "PL",     # pylint rules (via ruff)
    "PLC0415", # import-outside-top-level (not enabled by default under PL)
    "D",      # pydocstyle
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "PERF",   # perflint
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "T20",    # flake8-print
    "ISC",    # flake8-implicit-str-concat
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins (shadowing)
    "DTZ",    # flake8-datetimez (naive datetime)
    "N",      # pep8-naming
    "PT",     # flake8-pytest-style
    "ARG",    # flake8-unused-arguments
    "C90",    # mccabe — cyclomatic complexity
    "TCH",    # flake8-type-checking
    "EM",     # flake8-errmsg — no string literals in exceptions
    "FURB",   # refurb — modern Python idioms
    "G",      # flake8-logging-format — logging best practices
    "FA",     # flake8-future-annotations — from __future__ import annotations
    "PGH",    # pygrep-hooks — misc. code quality (blanket noqa, etc.)
    "FLY",    # flynt — prefer f-strings over .format()
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "D100",   # missing docstring in public module — enforced by pydocstyle directly
    "D104",   # missing docstring in public package (__init__.py)
    "D107",   # missing docstring in __init__ — not required for dataclasses/models
    "D203",   # one-blank-line-before-class — conflicts with D211
    "D212",   # multi-line-summary-first-line — conflicts with D213 (we use Google style)
    "D407",   # dashed-underline-after-section — not Google style
    "D406",   # section-name-should-end-with-newline — not Google style
    "PLR0913", # too many arguments — common in FastAPI routes
    "PLR2004", # magic value comparison — too noisy for early stage
    # PLR0915 — removed: functions refactored to stay within thresholds
    "PLW0603", # global statement — acceptable for singleton patterns (engine, session factory)
    "PIE804",  # unnecessary-dict-kwargs — Pydantic uses **{"alias": ...} patterns intentionally
    "RET504",  # unnecessary-assign — readability-first over short-circuit returns
    "ISC001",  # single-line-implicit-string-concat — conflicts with formatter
    "S101",   # assert — mirror [tool.bandit] skip
    "S105",   # hardcoded password — false positives on key-name mappings (mirror bandit)
    "A002",   # builtin-argument-shadowing — FastAPI route params named `id`/`type` are common
    "A003",   # builtin-attribute-shadowing — SQLModel/Pydantic models define `id`/`type` fields
    "PT011",   # pytest.raises too broad — Polars ignores this; false positives on ValueError etc.
    "PT018",   # composite-assertion — splitting compound asserts hurts readability in tests
    "PT019",   # fixture-param-without-value — `usefixtures` is equivalent; stylistic preference only
    "ARG002",  # unused method argument — common for FastAPI deps and abstract method signatures
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D104", "T20", "PERF", "S", "N", "DTZ", "ARG", "EM", "PLC0415", "RUF059", "F841", "E702", "E701"]
"scripts/**/*.py" = ["T20", "S", "EM"]
"alembic/**/*.py" = ["N"]
"vulture_whitelist.py" = ["B018", "F405", "PGH004"]  # Intentional dead-code references for vulture
"src/wikimind/mcp/server.py" = ["PLC0415", "F401"]  # Side-effect imports deferred until after mcp instance creation

[tool.ruff.lint.isort]
known-first-party = ["wikimind"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

# ---------- Pylint ----------
[tool.pylint.main]
load-plugins = ["pylint_pydantic"]
py-version = "3.11"

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring — handled by pydocstyle
    "C0115",  # missing-class-docstring — not required for all classes
    "C0116",  # missing-function-docstring — not required for all functions
    "R0903",  # too-few-public-methods — Pydantic models trigger this
    "R0913",  # too-many-arguments — common in FastAPI routes
    "E0611",  # no-name-in-module — false positives with pydantic
    "W0511",  # fixme — TODOs are acceptable
]

[tool.pylint.format]
max-line-length = 120

# ---------- Pydocstyle ----------
[tool.pydocstyle]
convention = "google"
add-ignore = ["D104", "D107"]
match = "(?!test_).*\\.py"
match-dir = "(?!tests).*"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = false         # Surfaces 17 legitimate `Any` propagations (SQLModel queries etc.);
                                # deferred to a dedicated strict-mode PR that fixes them with cast().
warn_unused_configs = true
warn_redundant_casts = true     # Step toward strict mode (issue #217 phase 3)
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true

# ---------- Basedpyright ----------
[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = false
reportMissingTypeStubs = false
reportAssignmentType = false  # SQLModel __tablename__ = "..." triggers false positive

# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
env = [
    "WIKIMIND_DEPLOYMENT_MODE=self_hosted",
]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",  # SwigPy* builtin types
    "ignore:coroutine.*was never awaited:RuntimeWarning:rich.text",  # rich formatting mock objects
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests requiring full stack",
    "external: tests that call external APIs",
    "postgres: tests that require a running PostgreSQL instance",
]

# ---------- Coverage ----------
[tool.coverage.run]
source = ["wikimind"]
branch = true
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/cli/*",            # CLI entry points — tested via subprocess in e2e
    "*/api/routes/ws.py", # WebSocket handlers — tested via e2e with real connections
    "*/main.py",          # App lifespan + SPA middleware — tested via e2e startup
    "*/api/routes/auth.py",  # OAuth flows — needs real OAuth providers (tracked in #364)
    "*/jobs/worker.py",   # ARQ worker process — needs real Redis + LLM; tested via e2e
    "*/services/embedding.py",  # Requires [search] extras (chromadb, sentence-transformers)
    "*/db_compat.py",     # Postgres-specific branches — tested via postgres integration tests
    "*/engine/linter/contradictions.py",  # LLM-dependent contradiction detection — tested via e2e
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.\\s*$",   # Protocol stub bodies (bare ellipsis)
]

# ---------- Bandit ----------
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B105"]  # B101: assert ok; B105: false positives on key-name mappings

# ---------- Interrogate (docstring coverage) ----------
[tool.interrogate]
# Start at 80% — ratchet up over time (issue #217 phase 4). Matches
# pydocstyle's scope (src/wikimind only, excluding tests + migrations).
fail-under = 80
exclude = ["tests", "alembic", "scripts", "build", "dist"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = false
ignore-semiprivate = true
ignore-property-decorators = false
ignore-module = true
quiet = false
verbose = 1

# ---------- Deptry (unused/missing dependency detection) ----------
[tool.deptry]
# Only test/lint/dev extras are true dev-only groups; search/transcribe/pdf/export
# are optional runtime features whose deps may be lazily imported.
optional_dependencies_dev_groups = ["test", "lint", "dev", "monitoring"]

# DEP002: packages that are not directly imported but are needed at runtime.
# DEP003: transitive deps whose public API we use (sqlalchemy via sqlmodel,
#         starlette via fastapi).
[tool.deptry.per_rule_ignores]
DEP002 = [
    "python-multipart",   # required by FastAPI for file/form uploads (runtime loaded)
    "aiosqlite",          # SQLAlchemy async SQLite driver (loaded by connection URL)
    "asyncpg",            # SQLAlchemy async Postgres driver (loaded by connection URL)
    "alembic",            # database migration CLI tool (not imported in app code)
    "fakeredis",          # mock Redis backend for dev/test when no real Redis
    "lxml",               # transitive dep pinned to force CVE-safe version
    "feedparser",         # RSS/Atom feed ingestion adapter
    "boto3",              # S3 sync feature
    "gunicorn",           # production WSGI server (CLI tool)

    "python-dateutil",    # date parsing utility (used transitively)
    "toml",               # config file parsing utility
    "openai-whisper",     # Whisper CLI transcription tool (optional extra)
]
DEP003 = [
    "sqlalchemy",         # public API used via sqlmodel
    "starlette",          # public API used via fastapi
]

# ---------- uv ----------
[tool.uv]
# The PyTorch CPU-only index (set via UV_EXTRA_INDEX_URL in Docker) ships old
# vendored copies of common packages (e.g. requests==2.28.1).  With the default
# "first-match" strategy uv stops searching after the first index that carries
# any version, blocking transitive deps that need newer releases from PyPI.
# "unsafe-best-match" considers *all* indexes and picks the highest compatible
# version, which mirrors pip's --extra-index-url semantics.
index-strategy = "unsafe-best-match"
